Prevent floated featured images from breaking out of container.

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -796,6 +796,7 @@ nav a,
     border-bottom: 0;
     margin-bottom: 0;
     overflow: visible;
+    display: flow-root;
 }
 
 .item-description .show {
