--- a/css/style.css
+++ b/css/style.css
@@ -783,6 +783,7 @@ input[type=submit] {
     border-bottom: 0;
     margin-bottom: 0;
     overflow: visible;
+    display: flow-root;
   }
 
   .item-description .show {
